Se agrego la pagina de la paella con la información requerida

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <h1>Odin Recipes</h1>
     <p><a href="./recipes/lasagna.html" target="_blank" 
         rel="noopener noreferrer">LASAÑA</a></p>
+    <p><a href="./recipes/paella.html" target="_blank">PAELLA</a></p>
 
 </body>
 </html>
