Paella añadida al index

--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <p><a href="./recipes/lasagna.html" target="_blank" 
-        rel="noopener noreferrer">LASAÑA</a></p>
-    <p><a href="./recipes/paella.html" target="_blank">PAELLA</a></p>
-
+    <ul>
+    <li><p><a href="./recipes/lasagna.html" target="_blank" 
+        rel="noopener noreferrer">LASAÑA</a></p></li>
+    <li><p><a href="./recipes/paella.html" target="_blank"
+        rel="noopener noreferrer">PAELLA</a></p></li>
+    </ul>
 </body>
 </html>
