Cambios a recetas hechos

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lasaña</title>
+    <link rel="stylesheet" href="styleslasagna.css">
 </head>
 <body>
-    <h1>LASAÑA</h1>
-    <p><img src="../Imagenes/lasaña.jpg" alt="Imagen de la Lasaña" width="350"
+    <h1 id="titulo">LASAÑA</h1>
+    <p class="Imagenes"><img src="../Imagenes/lasaña.jpg" alt="Imagen de la Lasaña" width="350"
         height="350"></p>
     <p>    
         <h4>
